--- a/src/styles/layouts/_trending.scss
+++ b/src/styles/layouts/_trending.scss
@@ -26,15 +26,14 @@
   }
 
   &__header-button {
-    width: 64px;
     font-size: $fz-sm;
     margin-right: $space-sm;
-    padding: $space-0;
+    padding: $space-m;
   }
 
   &__header-button-icon {
     color: $color-text-primary;
-    @include svg-small;
+    @include svg-size;
   }
 
   &__list-item {
